[gd_scene load_steps=2 format=3 uid="uid://cfiaq6641uo8a"]

[ext_resource type="Script" uid="uid://8il5fwwxwf28" path="res://desktop.gd" id="1_my12u"]

[node name="Desktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my12u")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="Background/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Click anywhere to enable"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lamp" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HelpContainer" type="CenterContainer" parent="Lamp"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Lamp/HelpContainer"]
layout_mode = 2

[node name="DisableLabelMarginContainer" type="MarginContainer" parent="Lamp/HelpContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="DisableLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/DisableLabelMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Click anywhere to disable"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrightnessLabelMarginContainer" type="MarginContainer" parent="Lamp/HelpContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Lamp/HelpContainer/VBoxContainer/BrightnessLabelMarginContainer"]
layout_mode = 2

[node name="BrightnessLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/BrightnessLabelMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Brightness 100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrightnessAdjustLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/BrightnessLabelMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Use +/- to adjust brightness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorSelectionLabelMarginContainer" type="MarginContainer" parent="Lamp/HelpContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Lamp/HelpContainer/VBoxContainer/ColorSelectionLabelMarginContainer"]
layout_mode = 2

[node name="ColorSelectionLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/ColorSelectionLabelMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Color Selection: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorAdjustLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/ColorSelectionLabelMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Use 0-9 or arrow keys to change colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabelMarginContainer" type="MarginContainer" parent="Lamp/HelpContainer/VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="Lamp/HelpContainer/VBoxContainer/InstructionsLabelMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Press F11 to toggle fullscreen
Press F8 to exit
Press F2 to open settings directory"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="Background" to="." method="_on_lamp_gui_input"]
[connection signal="gui_input" from="Lamp" to="." method="_on_lamp_gui_input"]
